[package]
name = "ai-artstation"
version = "1.0.0"
description = "AI Art Station - Generate images and videos with AI"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_artstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = [
  "json",
  "rustls",
  "multipart",
], default-features = false }

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "webp", "gif"] }
base64 = "0.22"

# Video processing (pure Rust - no FFmpeg dependency)
mp4parse = "0.17"   # MP4 container parsing
h264-reader = "0.8" # H.264 NAL parsing
openh264 = "0.9"    # H.264 decoding

# Audio extraction and stem separation
symphonia = { version = "0.5", features = [
  "isomp4",
  "aac",
] } # Extract audio from MP4
hound = "3.5" # Write WAV files
stem-splitter-core = "1.2" # Vocal/BGM separation via HTDemucs

# Encryption
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.10"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
hostname = "0.4"
opener = "0.8"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
